Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-52633

Bearer NetworkManager plugin shows duplicate interface entries

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • None
    • 5.6.0, 5.7.0
    • None
    • Gentoo x86_64
      NetworkManager 1.4.2
      NetworkManager-openvpn 1.2.6
      OpenVPN 2.3.13

      Also reproducible on ArchLinux.

      There are two possibly related problems. Here is a result of qDebug() << QNetworkInterface::allInterfaces(); (hardware addresses replaced with zeroes):

      (QNetworkInterface(name = "lo", hardware address = "00:00:00:00:00:00", flags = IsUp IsRunning IsLoopBack , entries = ((address = QHostAddress("127.0.0.1"), netmask = QHostAddress("255.0.0.0"), broadcast = QHostAddress("127.255.255.255")), (address = QHostAddress("::1"), netmask = QHostAddress("ffff:ffff:ffff:ffff:ffff:ffff:ffff:ffff"))))
      , QNetworkInterface(name = "sit0", hardware address = "00:00:00:00", flags = , entries = ())
      , QNetworkInterface(name = "eth0", hardware address = "00:00:00:00:00:00", flags = IsUp CanBroadcast CanMulticast , entries = ())
      , QNetworkInterface(name = "wlan0", hardware address = "00:00:00:00:00:00", flags = IsUp IsRunning CanBroadcast CanMulticast , entries = ((address = QHostAddress("192.168.1.7"), netmask = QHostAddress("255.255.255.0"), broadcast = QHostAddress("192.168.1.255")), (address = QHostAddress("fe80::ae7b:a1ff:fe74:b030%wlan0"), netmask = QHostAddress("ffff:ffff:ffff:ffff::"))))
      , QNetworkInterface(name = "tun0", hardware address = "", flags = IsUp IsRunning IsPointToPoint CanMulticast , entries = ((address = QHostAddress("10.9.0.54"), netmask = QHostAddress("255.255.255.255"), broadcast = QHostAddress("10.9.0.54")), (address = QHostAddress("fe80::5192:9690:fc77:41b5%tun0"), netmask = QHostAddress("ffff:ffff:ffff:ffff::"))))
      , QNetworkInterface(name = "tun0", hardware address = "", flags = IsUp IsRunning IsPointToPoint CanMulticast , entries = ())
      , QNetworkInterface(name = "tun0", hardware address = "", flags = IsUp IsRunning IsPointToPoint CanMulticast , entries = ())

      The list contains two duplicates of the tun0 interface without configurations. NetworkManager devices list does not contain these "ghosts" (inspected via DBus).

      The second problem is that QNetworkConfigurationManager signals configurationChanged() for interface tun0 approx. 20 times per second.

        1. qtbug-52633.tar.gz
          0.7 kB
          Eugene Shalygin
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            lpotter Lorn Potter
            eugeneshalygin Eugene Shalygin
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes